configuring redis
