# src/main/java/com/gino/store/goodclothesstore/backoffice/web/TagsApiImpl.java
@@ -21,29 +21,38 @@ public class TagsApiImpl implements TagsApi {
   private final TagsService tagsService;
 
   @Override
-  public Mono<ResponseEntity<TagsResponse>> listTags(Integer limit, Integer offset,
+  public Mono<ResponseEntity<Void>> addTag(UUID xAuthToken, Mono<TagRequest> tagRequest,
       ServerWebExchange exchange) {
-    return tagsService.listTags(limit, offset)
+    return tagsService.addTag(xAuthToken, tagRequest)
+        .map(ResponseEntity::ok);
+  }
+
+
+  @Override
+  public Mono<ResponseEntity<TagResponse>> getTagById(UUID xAuthToken, UUID tagId,
+      ServerWebExchange exchange) {
+    return tagsService.getTagById(xAuthToken, tagId)
         .map(ResponseEntity::ok);
   }
 
   @Override
-  public Mono<ResponseEntity<TagResponse>> getTagById(UUID tagId,
+  public Mono<ResponseEntity<TagsResponse>> listTags(UUID xAuthToken, Integer limit, Integer offset,
       ServerWebExchange exchange) {
-    return tagsService.getTagById(tagId)
+    return tagsService.listTags(xAuthToken, limit, offset)
         .map(ResponseEntity::ok);
   }
 
   @Override
-  public Mono<ResponseEntity<Void>> addTag(Mono<TagRequest> tagRequest,
-      ServerWebExchange exchange) {
-    return tagsService.addTag(tagRequest)
-        .map(ResponseEntity::ok);
+  public Mono<ResponseEntity<Void>> updateTag(UUID tagId, UUID xAuthToken,
+      Mono<TagRequest> tagRequest, ServerWebExchange exchange) {
+    return TagsApi.super.updateTag(tagId, xAuthToken, tagRequest, exchange);
   }
 
   @Override
-  public Mono<ResponseEntity<Void>> deleteTag(UUID tagId, ServerWebExchange exchange) {
-    return tagsService.deleteTag(tagId)
+  public Mono<ResponseEntity<Void>> deleteTag(UUID tagId, UUID xAuthToken,
+      ServerWebExchange exchange) {
+    return tagsService.deleteTag(tagId, xAuthToken)
         .map(ResponseEntity::ok);
   }
+
 }
